themes/greatermedia/assets/css/sass/components/_search.scss
.header__search--form {
	display: block;
	position: relative;
	width: 100%;
	height: 40px;
	padding: 0 20px;
	border-top: 1px solid $secondary-bg;
	background-color: transparent;
	@include bp(medium) {
		position: fixed;
		top: 0;
		left: 0;
		width: 100%;
		height: 132px;
		padding: 16px 2.5%;
		background-color: $primary-bg;
		border-top: none;
		@include transition(all 200ms ease-in-out);
		@include transform(translate(0, -100%));
		z-index: 1000;
	}

	.logged-in & {
		top: 32px;
	}
}

.header__search--label {
	cursor: pointer;
}

.header__search--open {
	@include transition(all 200ms ease-in-out);
	@include transform(translate(0, 0));
}

.header__search--input {
	float: left;
	width: 90% !important;
	height: 40px;
	padding: 0 !important;
	background-color: transparent !important;
	border: none !important;
	outline: none;
	font-size: ms(0);
	color: $secondary-heading;
	@include placeholder {
		color: $secondary-heading;
	}
	@include bp(medium) {
		height: 100px;
		background-color: $primary-bg !important;
		outline: none;
		font-size: ms(7);
		color: $color-text-black;
		text-align: center;
		@include placeholder {
			color: $secondary-link;
		}
	}
}

.header__search--submit {
	position: relative;
	float: right;
	height: 40px;
	border: none;
	background-color: transparent;
	color: $secondary-heading;
	@include bp(medium) {
		width: 10%;
		height: 100px;
		color: $color-text-black;
	}
}

.header__search--submit:before {
	@extend %gmr-icons;
	font-size: ms(1);
	content: "\e612";
	@include bp(medium) {
		font-size: ms(5);
	}
}

.search__results--count {
	padding-bottom: 12px;
	margin: 0;
	line-height: 1;
	border-bottom: 6px solid $color-text-gray;
	font-family: $open-sans;
	font-size: ms(-1);
	font-weight: lighter;
	color: $color-text-gray;
}

.search__keyword {
	padding: 0;
	margin-top: 26px;
	margin-bottom: 0;
	font-size: ms(1.5);
	color: $color-text-gray;
	text-transform: uppercase;
}

.search__keyword--term {
	color: $color-text-red;
}

.keyword__search--results {
	margin-bottom: 4em;
}

.search__title {
	padding-bottom: 12px;
	margin: 0;
	line-height: 1;
	border-bottom: 6px solid $primary-border;
	font-family: $open-sans;
	font-size: ms(-1);
	font-weight: lighter;
	color: $color-text-gray;
}

.search__result {
	width: 100%;
	padding-top: 26px;
	padding-bottom: 26px;
	margin: 0;
	overflow: auto;
	border-bottom: 1px solid $primary-border;
}

.search__result:last-of-type {
	padding-bottom: 0;
	border-bottom: none;
}

.search__result--date {
	@include span-columns(1 of 4);
	padding: 5px 0;
	font-size: ms(-1);
	color: $secondary-heading;
	@include bp(small) {
		@include span-columns(2 of 6);
	}
	@include bp(medium) {
		@include span-columns(2 of 6);
	}
	@include bp(large) {
		@include span-columns(2 of 10);
	}
	@include bp(x-large) {
		@include span-columns(2 of 10);
	}
}

.search__result--title {
	@include span-columns(3 of 4);
	@include omega;
	margin-top: 0;
	margin-bottom: 0;
	font-family: $open-sans;
	font-size: ms(2);
	font-weight: normal;
	color: $color-text-red;
	@include bp(small) {
		@include span-columns(4 of 6);
		@include omega;
	}
	@include bp(medium) {
		@include span-columns(4 of 6);
		@include omega;
	}
	@include bp(large) {
		@include span-columns(8 of 10);
		@include omega;
	}
	@include bp(x-large) {
		@include span-columns(8 of 10);
		@include omega;
	}
}

.search__result--title a:link, .search__result--title a:visited {
	color: $color-text-red;
}

.search__result--title a:hover, .search__result--title a:focus, .search__result--title a:active {
	color: $color-text-black;
}

.search__result--term {
	font-weight: bold;
}

